--- a/xml/xml.vcxproj
+++ b/xml/xml.vcxproj
@@ -129,12 +129,14 @@
   <ItemGroup>
     <ClCompile Include="Planet.cpp" />
     <ClCompile Include="pugixml.cpp" />
+    <ClCompile Include="SolarSystem.cpp" />
     <ClCompile Include="xml.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Planet.h" />
     <ClInclude Include="pugiconfig.hpp" />
     <ClInclude Include="pugixml.hpp" />
+    <ClInclude Include="SolarSystem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
